# agentpulse

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  plan.md  spec.md
src/agentpulse/: __init__.py  cli.py  config_writer.py  detector.py  setup_wizard.py  status.py
src/agentpulse/providers/: __init__.py  registry.py
tests/: test_config_writer.py  test_detector.py  test_fuzzy.py
